--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
       <!-- Our advantages section -->
       <section class="advantages-section">
-        <!-- <h2 class="advantages-title">Our advantages</h2> -->
+        <h2 class="advantages-title">Our advantages</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Strategy</h3>
